Refactor tests to replace "command" terminology with "request" for consistency
- Updated test cases in StatelessCommunicationTests, TimeoutManagementAdvancedTests, and TimeoutTests to reflect the change from commands to requests.
- Adjusted related error handling and validation logic to align with the new request terminology.
- Removed ChannelManifest references and replaced them with ModelManifest in test files.
- Modified test-manifest.json to change command definitions to request definitions.
- Added a script to automate the removal of ChannelManifest references and update JanusClient constructors.

--- a/.gitignore
+++ b/.gitignore
@@ -44,15 +44,15 @@ DerivedData/
 !default.mode1v3
 *.mode2v3
 !default.mode2v3
-*.perspectivev3
-!default.perspectivev3
+*.permanifesttivev3
+!default.permanifesttivev3
 
 # Other
 *.moved-aside
 *.xccheckout
 *.xcscmblueprint
 
-# Obj-C/Swift specific
+# Obj-C/Swift manifestific
 *.hmap
 *.ipa
 *.dSYM.zip
@@ -242,7 +242,7 @@ dist
 .pnp.*
 
 # =============================================================================
-# Project Specific
+# Project Manifestific
 # =============================================================================
 # Scribono Engine logs
 engine.log
